# 3d-engine

./: .gitignore  Cargo.toml  README.md
models/: xyz.stl
src/: camera.rs  main.rs  matrix3x3.rs  matrix4x4.rs  mesh.rs  scene.rs  triangle.rs  vec3d.rs
